ajout homeButton + correction home overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -507,3 +507,12 @@ input{
   opacity: 0;
   animation: fadeIn 1s ease-in forwards;
 }
+
+.HomeButton{
+  display: block;
+  margin-left: auto;
+  margin-right: 30px;
+  z-index: 200;
+  width: 30px;
+  height: 30px;
+}
